fixed css to align items according to figma

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 body {
   font-family: "Roboto", sans-serif;
-  box-sizing: border-box;
   width: 900px;
   height: 415px;
 }
@@ -8,29 +7,63 @@ body {
 .container {
   display: flex;
   justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
+.main-video,
+.sider {
+  margin: 38px 0 0 35px;
+}
 .main-video .video-title,
 .sider .video-thumbnail-title {
   font-weight: 700;
 }
 
-.main-video {
-  margin: 38px 0 0 35px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, max(543px));
+.watched,
+.main-video-description,
+.video-author,
+.thumbnails-views,
+.thumbnails-time-passed {
+  font-weight: 300;
 }
 
+.watched,
+.video-thumbnail-title {
+  font-size: 14px;
+}
+.main-video-description {
+  font-size: 16px;
+}
 .main-video .video-title {
   font-size: 18px;
 }
+
+.main-video .main-video-description,
+.main-video .video-title,
+.main-video .watched {
+  line-height: 22px;
+}
+
+.sider .video-thumbnail-info {
+  font-size: 11px;
+  line-height: 13px;
+  margin-left: 4px;
+}
+
 .sider {
-  margin-left: 17px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  left: 4px;
 }
 
 .sider .video-thumbnail,
 .sider .ads {
-  margin: 38px 35px 55px;
   display: grid;
   grid-template-columns: repeat(2, auto);
+}
+
+.video-thumbnail {
+  margin-top: 20px;
 }
